<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.castlabs.dash</groupId>
    <artifactId>dash.encrypt</artifactId>
    <packaging>pom</packaging>
    <version>2.0.1-SNAPSHOT</version>
    <modules>
        <module>dash.xsd</module>
        <module>dash.fragmencrypter</module>
    </modules>

    <profiles>
        <profile>
            <id>java-9</id>
            <activation>
                <jdk>9</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.7.0</version>

                        <configuration>
                            <source>9</source>
                            <target>9</target>
                            <compilerArgs>
                                <arg>--add-modules</arg>
                                <arg>java.xml.bind</arg>
                            </compilerArgs>
                            <fork>true</fork>
                            <!-- without forking compilation happens in the

                                same process, so no arguments are applied -->
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>
                                --add-modules java.xml.bind
                                --illegal-access=deny
                            </argLine>
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <configuration>
                            <argLine>
                                --add-modules java.xml.bind
                                --illegal-access=deny
                            </argLine>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <scm>
        <developerConnection>scm:git:git@github.com:castlabs/dashencrypt.git</developerConnection>
        <tag>dash.encrypt-1.7.56-3</tag>
    </scm>

    <build>
        <defaultGoal>install</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>8</source>
                    <target>8</target>

                </configuration>

            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <localCheckout>true</localCheckout>
                </configuration>
            </plugin>
        </plugins>
    </build>


    <distributionManagement>
        <repository>
            <id>releases</id>
            <url>https://repository.castlabs.com/content/repositories/releases</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <url>https://repository.castlabs.com/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

</project>
